--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/gussware/plugin-basic-pagination#readme",
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "handlebars": "^4.7.7",
     "jquery": "^3.6.3"
   }
 }
